drkns 06.03.2017 14:08:55 +0000 - build 4907

1. Выход из плагина network мог вызывать переход в несуществующую папку.

2. Рефакторинг.

zg 06.03.2017 14:02:30 +0200 - build 4906

1. 0003401: Странный баг с часами в редакторе.

drkns 05.03.2017 16:01:22 +0000 - build 4905

1. С форума: при работе по сети с NAS QNAP почему-то при заходе на любую шару текущий и родительский каталоги дополнительно добавляются в список.
   В QNAP, видимо, тоже не читали "2.4.17 FileIdBothDirectoryInformation".

drkns 28.02.2017 18:57:23 +0000 - build 4904

1. Не удалялись временные файлы, созданные во время вызова просмотра из результатов поиска.

drkns 27.02.2017 19:04:21 +0000 - build 4903

1. 0003358: ArcLite. The system cannot find the path specified

drkns 22.02.2017 23:45:29 +0000 - build 4902

1. При обработке команды 'set' не удалялись кавычки из фильтра.

drkns 21.02.2017 18:50:57 +0000 - build 4901

1. Опечатка в 4883.

drkns 20.02.2017 19:16:22 +0000 - build 4900

1. Coverity warnings.

drkns 18.02.2017 19:05:09 +0000 - build 4899

1. Рефакторинг, переименования.

svs 14.02.2017 20:19:16 +0300 - build 4898

1. SQLite 3.17.0

zg 12.02.2017 20:58:11 +0200 - build 4897

1. уточнение 4889.

drkns 11.02.2017 15:51:04 +0000 - build 4896

1. Рефакторинг.

drkns 10.02.2017 22:44:19 +0000 - build 4895

1. Уточнение 4892.

drkns 10.02.2017 22:12:46 +0000 - build 4894

1. Рефакторинг.

yjh 08.02.2017 23:33:29 +0300 - build 4893

1. адаптеция ulink-хелпера к хидерам VS2015sp3 (const)
2. в предыдущем коммите внесена некомпилируемая ошибка (потеря части строки)

drkns 08.02.2017 19:50:19 +0000 - build 4892

1. Рефакторинг.

drkns 08.02.2017 19:44:46 +0000 - build 4891

1. С форума - файлы, запущенные через системные ассоциации пишутся в историю без кавычек, даже если имеют пробелы в именах, из-за чего повторный запуск через Ctrl+E невозможен.

zg 07.02.2017 12:15:01 +0200 - build 4890

1. уточнение 4889.

zg 30.01.2017 17:04:33 +0200 - build 4889
