@@ -101,7 +101,7 @@ public:
 	*/
 	void PluginCommit();
 	int CountWindowsWithName(const string& Name, BOOL IgnoreCase = TRUE);
-	bool IsPanelsActive(bool and_not_qview = false) const; // используется как признак Global->WaitInMainLoop
+	bool IsPanelsActive(bool and_not_qview = false, bool or_autocomplete = false) const;
 	window_ptr FindWindowByFile(int ModalType, const string& FileName, const wchar_t *Dir = nullptr);
 	void EnterMainLoop();
 	void ProcessMainLoop();
