@@ -1,3 +1,7 @@
+zg 07.03.2017 03:02:10 +0200 - build 4908
+
+1. убрана глобальная переменная WaitInMainLoop.
+
 drkns 06.03.2017 14:08:55 +0000 - build 4907
 
 1. Выход из плагина network мог вызывать переход в несуществующую папку.
